Fri Oct 20 12:40:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/OS_NS_sys_socket.inl (bind):
	* ace/config-rtems.h:
	  Added ACE_LACKS_BIND

	* ace/Basic_Types.h:
	  Fixed compile problems with BCB6

Fri Oct 20 12:05:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/Log_Record.inl:
	  Added check for ACE_LACKS_NTOHL and ACE_LACKS_HTONL

	* ace/config-rtems.h:
	  Added ACE_LACKS_NTOHL and ACE_LACKS_HTONL when no networking
	  is available

Fri Oct 20 09:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/INET_Addr.h:
	  Small change to improve doxygen documentation

	* ace/OS_NS_sys_socket.inl (listen):
	  Added ACE_LACKS_LISTEN

	* ace/config-rtems.h:
	  Added ACE_LACKS_LISTEN

Fri Oct 20 09:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* bin/MakeProjectCreator/config/ciao_nodeapplicationmanager.mpb:
	* bin/MakeProjectCreator/config/ciao_nodemanager_stub.mpb:
	* bin/MakeProjectCreator/config/ciao_targetmanager_stub.mpb:
	  New base projects

	* bin/MakeProjectCreator/config/ciao_static_dnc_app.mpb:
	  Use the new base projects above

          Thanks to Abdul Sowayan <abdullah dot sowayan at lmco dot com>
          for delivering these files

Fri Oct 20 09:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/sys/os_socket.h:
	  Defined AF_UNSPEC and PF_UNSPEC when these are not defined by the
	  OS header files.

Fri Oct 20 08:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/sys/os_uio.h:
	  When INADDR_ANY is not defined, then define it, we need it in several
	  of the ACE header files

Fri Oct 20 08:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/sys/os_uio.h:
	  We define iovec when ACE_WIN32 was defined, changed this to a new
	  define, ACE_LACKS_IOVEC to make it easier to use with other platforms

	* ace/config-win32-common.h:
	  Added ACE_LACKS_IOVEC

	* ace/config-rtems.h: